# utvm_staticrt_codegen

./: .gitignore  pyproject.toml
examples/target_src/: mainDense.c
src/: CodeGen.cpp  TVMInfoExtraction.c  main.cpp
